fix slider-thumb on firefox

--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -772,7 +772,7 @@
 }
 
 .mk-theme .shaka-small-play-button[aria-label="Pause"] {
-  content: "pause_circle_filled"
+  content: "pause_circle_filled";
 }
 
 .mk-theme .shaka-mute-button {
@@ -790,8 +790,6 @@
 
 .mk-theme .shaka-controls-button-panel > :focus {
   outline: 0;
-  -webkit-box-shadow: inset 0 0 0 2px rgba(27, 127, 204, 0.8);
-  box-shadow: inset 0 0 0 2px rgba(27, 127, 204, 0.8);
   color: #fff;
 }
 
@@ -866,9 +864,9 @@
 } */
 
 .mk-theme .shaka-seek-bar-container input[type="range"] {
-  height: 0px;
+  height: 5px;
   -webkit-appearance: none;
-  /* margin: 10px 0; */
+  margin: 1px 0;
   opacity: 1;
   width: 100%;
 }
@@ -878,8 +876,8 @@
 .mk-theme .shaka-seek-bar-container input[type="range"]::-webkit-slider-thumb {
   box-shadow: 0px 0px 0px #000000;
   border: 0px solid #000000;
-  height: 27px;
-  width: 40px;
+  height: 19px;
+  width: 26px;
   border-radius: 49px;
   background: #2eb5c0;
   cursor: pointer;
@@ -887,19 +885,17 @@
 }
 .mk-theme .shaka-seek-bar-container input[type="range"]::-moz-range-track {
   width: 100%;
-  height: 14px;
+  height: 16px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 1px 1px 1px #50555c;
   background: #50555c;
-  border-radius: 14px;
   border: 0px solid #000000;
 }
 .mk-theme .shaka-seek-bar-container input[type="range"]::-moz-range-thumb {
   box-shadow: 0px 0px 0px #000000;
   border: 0px solid #000000;
-  height: 27px;
-  width: 50px;
+  height: 16px;
+  width: 26px;
   border-radius: 49px;
   background: #2eb5c0;
   cursor: pointer;
@@ -908,7 +904,6 @@
   width: 100%;
   height: 14px;
   cursor: pointer;
-  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
@@ -926,11 +921,10 @@
   box-shadow: 1px 1px 1px #50555c;
 }
 .mk-theme .shaka-seek-bar-container input[type="range"]::-ms-thumb {
-  margin-top: 1px;
   box-shadow: 0px 0px 0px #000000;
   border: 0px solid #000000;
-  height: 27px;
-  width: 50px;
+  height: 19px;
+  width: 26px;
   border-radius: 49px;
   background: #2eb5c0;
   cursor: pointer;
